--- a/public/chatWindow/theme.css
+++ b/public/chatWindow/theme.css
@@ -472,7 +472,7 @@ body.theme-west .chat-box {
 .theme-west .chat-input {
     border: 2px solid #232321;
     width: 86%; /* 缩小宽度 */
-    margin-top: 5%; /* 增加顶部外边距 */
+    margin-top: 2%; /* 向上移动 */
     margin-left: 7%; /* 居中显示 */
 }
 
@@ -566,7 +566,7 @@ body.theme-west .chat-box {
     overflow-y: auto;
     padding: 10px;
     width: 95%;
-    left: 50%;
+    left: 52%; /* 向右移动一点 */
     transform: translateX(-50%);
     margin-bottom: 0;
     bottom: 110px;
